k8s/apps/postgrest/postgrest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  labels:
    app: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: app
          ports:
            - name: http
              containerPort: 3000
            - name: admin
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /ready
              port: admin
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /live
              port: admin
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest
spec:
  selector:
    app: postgrest
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgrest
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: postgrest.home-server.antoine-campbell.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: postgrest
                port:
                  name: http
  tls:
    - secretName: home-server-wildcard-signed-prod
